--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="#">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;1,300;1,500&display=swap"
       rel="stylesheet"
